# streaming-enhancement-sweet-v3

./: AGENTS.md  LICENSE  README.md
docs/: PLAN.md  WORKFLOW.md  phase-plan-template.md
docs/api/: daemon-api.md  health-check.md  oauth-endpoints.md
docs/architecture/: daemon-server-core.md  keystore-strategy-pattern.md  oauth-security-model.md  platform-strategy-pattern.md  shared-data-models.md  stream-field-mapping.md
docs/archive/: ARCHITECTURE-REVISION-SUMMARY.md  shared-data-models-summary.md
docs/feature-plans/: daemon-server-core.md  kick-platform-strategy.md  oauth-flow-keystore.md  shared-data-models.md  twitch-platform-strategy.md  youtube-platform-strategy.md
docs/fixes/: native-keystore-linux-secret-service.md
docs/guides/: cli-reference.md  configuration.md  installation.md  troubleshooting.md
docs/module-plans/: module-server-daemon.md
docs/phase-plans/: kick-platform-strategy-phase-1-facade.md  kick-platform-strategy-phase-2-websocket-client.md  kick-platform-strategy-phase-3-event-handler.md  kick-platform-strategy-phase-4-rest-client.md  kick-platform-strategy-phase-5-integration.md  kick-platform-strategy-phase-6-tests.md  phase-10-documentation-final-polish.md  phase-11-obs-websocket.md  phase-12-integration-tests.md  (+25 more)
shared/keystore-native/: .gitignore  Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json  test.js
shared/keystore-native/linux-x64/: keystore_native.node
shared/keystore-native/src/: error.rs  lib.rs  platform.rs
shared/keystore-native/src/platform/: fallback.rs  linux.rs  macos.rs  windows.rs
(+105 files in other folders)
